--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "plum", # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "sunrise"
+minimal_mistakes_skin    : "plum" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "sunrise"
 
 # Site Settings
 locale                   : "ko"
@@ -52,8 +52,8 @@ reCaptcha:
 atom_feed:
   path                   : # blank (default) uses feed.xml
   hide                   : # true, false (default)
-search                   : TRUE
-search_full_content      : TRUE
+search                   : true
+search_full_content      : true
 search_provider          : # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
@@ -95,7 +95,7 @@ analytics:
 # Site Author
 author:
   name             : "김윤진"
-  avatar           : 
+  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "행복한 학생"
   location         : "대한민국, 경기"
   email            : "21-20907@hafs.hs.kr"
