--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "aqua" # "air", "contrast", "dark", "dirt", "neon", "
 
 # Site Settings
 locale                   : "ko"
-title                    : "나에 대해서"
+title                    : "Yoonjin's Lab"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "김윤진"
