--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 author:
   name             : "김윤진"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "(≧▽≦)⊃━☆.｡.:*"
+  bio              : "(≧▽≦)⊃━⭐｡.:*"
   location         : "대한민국, 경기"
   email            : "21-20907@hafs.hs.kr"
   links:
