--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 # Site Author
 author:
   name             : "김윤진"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/avaataar.png"
   bio              : "ლ(╹◡╹ლ)"
   location         : "대한민국, 경기"
   email            : "21-20907@hafs.hs.kr"
